compiler/lume_parse/src/snapshots/lume_parse__tests__binary_snapshots@xor.snap
---
source: compiler/lume_parse/src/tests.rs
expression: "parse(Target :: Statement, \"0 ^ 0;\")"
---
SOURCE_FILE@0..6
  EXPR_STMT@0..6
    BIN_EXPR@0..5
      LIT_EXPR@0..1
        LITERAL@0..1
          INTEGER_LIT@0..1 "0"
      WHITESPACE@1..2 " "
      BINARY_XOR@2..3 "^"
      WHITESPACE@3..4 " "
      LIT_EXPR@4..5
        LITERAL@4..5
          INTEGER_LIT@4..5 "0"
    SEMICOLON@5..6 ";"
