compiler/lume_parse/src/snapshots/lume_parse__tests__boolean_snapshots@and.snap
---
source: compiler/lume_parse/src/tests.rs
expression: "parse(Target :: Statement, \"0 && 0;\")"
---
SOURCE_FILE@0..7
  EXPR_STMT@0..7
    BIN_EXPR@0..6
      LIT_EXPR@0..1
        LITERAL@0..1
          INTEGER_LIT@0..1 "0"
      WHITESPACE@1..2 " "
      AND@2..4 "&&"
      WHITESPACE@4..5 " "
      LIT_EXPR@5..6
        LITERAL@5..6
          INTEGER_LIT@5..6 "0"
    SEMICOLON@6..7 ";"
