compiler/lume_parse/src/snapshots/lume_parse__tests__call_snapshots@function_param_2.snap
---
source: compiler/lume_parse/src/tests.rs
expression: "parse(Target :: Statement, \"let _ = call(a, b);\")"
---
SOURCE_FILE@0..15
  LET_STMT@0..15
    LET_KW@0..3 "let"
    NAME@3..4
      IDENT@3..4 "_"
    ASSIGN@4..5 "="
    STATIC_CALL_EXPR@5..14
      NAME@5..9
        IDENT@5..9 "call"
      ARG_LIST@9..14
        LEFT_PAREN@9..10 "("
        VARIABLE_EXPR@10..11
          IDENT@10..11 "a"
        COMMA@11..12 ","
        VARIABLE_EXPR@12..13
          IDENT@12..13 "b"
        RIGHT_PAREN@13..14 ")"
    SEMICOLON@14..15 ";"
