compiler/lume_parse/src/snapshots/lume_parse__tests__call_snapshots@method_empty.snap
---
source: compiler/lume_parse/src/tests.rs
expression: "parse(Target :: Statement, \"let _ = a.call();\")"
---
SOURCE_FILE@0..17
  LET_STMT@0..17
    LET_KW@0..3 "let"
    WHITESPACE@3..4 " "
    NAME@4..5
      IDENT@4..5 "_"
    WHITESPACE@5..6 " "
    ASSIGN@6..7 "="
    INSTANCE_CALL_EXPR@7..16
      IDENT@7..8 "a"
      WHITESPACE@8..9 " "
      DOT@9..10 "."
      IDENT@10..14 "call"
      ARG_LIST@14..16
        LEFT_PAREN@14..15 "("
        RIGHT_PAREN@15..16 ")"
    SEMICOLON@16..17 ";"
